# kernel

./: .dockerignore  .gitignore  BACKLOG.md  CHANGELOG.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  greptile.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: competitor_comparison.py  cross_model_smoke.py  diagnostic_test.py  pipeline_doctor.py  run_longmemeval.py  run_longmemeval_v2.py  run_overnight.ps1  run_retrieval_shrimpk.py  sanity_test.py  sustained_daemon_test.py  threshold_model_matrix.py  threshold_sweep.py
benchmarks/results/: competitor_comparison.json  gemma3_smoke.jsonl  matrix_checkpoint.json  shrimpk_gemma3-1b_50.jsonl  shrimpk_qwen2.5-7b_50.jsonl  shrimpk_smoke_test.jsonl  sustained_daemon_test.json  threshold_sweep.json
cli/: Cargo.toml
cli/src/: main.rs  tui.rs
crates/bellkis-context/: Cargo.toml
crates/bellkis-context/src/: lib.rs
crates/bellkis-core/: Cargo.toml
crates/bellkis-core/src/: config.rs  error.rs  lib.rs  memory.rs  pii.rs  traits.rs
crates/bellkis-kernel/: Cargo.toml
crates/bellkis-kernel/src/: lib.rs
crates/bellkis-memory/: Cargo.toml
crates/bellkis-memory/src/: consolidation.rs  echo.rs  embedder.rs  hebbian.rs  lib.rs  lsh.rs  persistence.rs  pii.rs  reformulator.rs  store.rs
crates/bellkis-router/: Cargo.toml
crates/bellkis-router/src/: lib.rs
crates/bellkis-security/: Cargo.toml
crates/bellkis-security/src/: lib.rs
crates/shrimpk-context/: Cargo.toml
crates/shrimpk-context/src/: assembler.rs  budget.rs  lib.rs  segment.rs  sensitivity.rs
crates/shrimpk-core/: Cargo.toml
crates/shrimpk-core/src/: config.rs  entity.rs  error.rs  lib.rs  memory.rs  pii.rs  traits.rs
crates/shrimpk-daemon/: Cargo.toml
crates/shrimpk-daemon/src/: detect.rs  main.rs  proxy.rs  rate_limit.rs  routes.rs  state.rs
crates/shrimpk-daemon/tests/: daemon_integration.rs
crates/shrimpk-kernel/: Cargo.toml
crates/shrimpk-kernel/src/: lib.rs
crates/shrimpk-mcp/: Cargo.toml
crates/shrimpk-mcp/src/: format.rs  handler.rs  main.rs  protocol.rs  tools.rs
crates/shrimpk-memory/: Cargo.toml
crates/shrimpk-memory/src/: activation.rs  bloom.rs  consolidation.rs  consolidator.rs  echo.rs  embedder.rs  embedding_provider.rs  hebbian.rs  importance.rs  labels.rs  lib.rs  lsh.rs  persistence.rs  pii.rs  reformulator.rs  reranker.rs  similarity.rs  speech.rs  store.rs
crates/shrimpk-memory/tests/: intelligence_engine_test.rs  lme_micro_benchmark.rs
crates/shrimpk-python/: Cargo.toml  pyproject.toml
crates/shrimpk-python/src/: lib.rs
crates/shrimpk-ros2/: Cargo.toml
crates/shrimpk-ros2/src/: bridge.rs  client.rs  config.rs  lib.rs  node.rs
crates/shrimpk-ros2/tests/: bridge_tests.rs
crates/shrimpk-router/: Cargo.toml
crates/shrimpk-router/src/: cascade.rs  config.rs  cost.rs  health.rs  lib.rs
crates/shrimpk-security/: Cargo.toml
crates/shrimpk-security/src/: lib.rs
crates/shrimpk-tray/: Cargo.toml
crates/shrimpk-tray/src/: main.rs
crates/shrimpk-viz/: Cargo.toml  tauri.conf.json
crates/shrimpk-viz/src/: main.rs
crates/shrimpk-viz/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/shrimpk-viz/web/src/: App.tsx
crates/shrimpk-viz/web/src/api/: client.ts
crates/shrimpk-viz/web/src/components/: CommunityLegend.tsx  CommunityPanel.tsx  GraphCanvas.tsx  NodeDetail.tsx  SearchBar.tsx  SizeLegend.tsx  Toolbar.tsx
crates/shrimpk-viz/web/src/components/ui/: Badge.tsx  Button.tsx  IconButton.tsx  Panel.tsx  StateDisplay.tsx  Toggle.tsx
crates/shrimpk-viz/web/src/hooks/: useCameraTransition.ts
crates/shrimpk-viz/web/src/layouts/: AppLayout.tsx
crates/shrimpk-viz/web/src/lib/: categoryColors.ts  layout.ts
crates/shrimpk-viz/web/src/stores/: graphStore.ts
crates/shrimpk-viz/web/src/styles/: globals.css
crates/shrimpk-viz/web/test/: STD-KS77.md  STP-KS77.md  preflight.sh
docs/: ADR-015-LABEL-BUCKET-ARCHITECTURE.md  ARCHITECTURE.md  BENCHMARKS.md  HUMAN-MEMORY-ANALOGIES.md  INTEGRATION-GUIDE.md  KNOWN-ISSUES.md  ROADMAP.md
examples/echo-cli/: Cargo.toml
examples/echo-cli/src/: main.rs
integrations/openclaw/: README.md  package.json
integrations/openclaw/src/: client.ts  index.ts
scripts/: install-remote.sh  install.ps1  install.sh  register-hook.ps1  shrimpk-hook.sh  unregister-hook.ps1
src/: lib.rs
tests/: echo_head_to_head.rs  echo_integration.rs  echo_label_bench.rs  echo_label_tuning.rs  echo_longmemeval.rs  echo_longmemeval_expanded.rs  echo_micro_benchmark.rs  echo_multimodal_bench.rs  echo_precision_tuning.rs  echo_regression_diagnostic.rs  echo_scale_test.rs  echo_speech_bench.rs  echo_speech_test.rs  echo_stress_test.rs  echo_tier2_realistic.rs  echo_token_efficiency.rs  load_personas.py
wix/: main.wxs
