[workspace]
members = ["crates/*", "examples/*", "cli"]
resolver = "2"

# Root package: enables workspace-level integration tests (tests/*.rs)
[package]
name = "shrimpk-kernel-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration tests for the ShrimPK AI-OS kernel"
publish = false

# No library — this package exists only to host integration tests
[lib]
path = "src/lib.rs"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/bellkisai/kernel"
homepage = "https://github.com/bellkisai/kernel"
description = "The AI Operating System kernel — Echo Memory, provider routing, context assembly"
readme = "README.md"
keywords = ["ai", "memory", "embedding", "llm", "kernel"]
categories = ["science", "algorithms"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Async
tokio = { version = "1", features = ["full"] }
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
# Time
chrono = { version = "0.4", features = ["serde"] }
# UUID
uuid = { version = "1", features = ["v4", "serde"] }
# Echo Memory
fastembed = "5"
simsimd = "6"
memmap2 = "0.9"
crc32fast = "1"
bloomfilter = "1"
rand = "0.8"
rand_distr = "0.4"
regex = "1"
sysinfo = "0.32"
dirs = "6"
# Internal crates (version required for crates.io publish)
shrimpk-core = { version = "0.1.0", path = "crates/shrimpk-core" }
shrimpk-memory = { version = "0.1.0", path = "crates/shrimpk-memory" }
shrimpk-router = { version = "0.1.0", path = "crates/shrimpk-router" }
shrimpk-context = { version = "0.1.0", path = "crates/shrimpk-context" }
shrimpk-security = { version = "0.1.0", path = "crates/shrimpk-security" }
shrimpk-kernel = { version = "0.1.0", path = "crates/shrimpk-kernel" }

# Workspace-root integration tests (tests/*.rs)
[dev-dependencies]
shrimpk-core = { path = "crates/shrimpk-core" }
shrimpk-memory = { path = "crates/shrimpk-memory" }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
