[package]
name = "bellkis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and error framework for the Bellkis AI-OS kernel"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
