[package]
name = "shrimpk-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context assembler — smart prompt compilation with Echo Memory integration"

[dependencies]
shrimpk-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
