[package]
name = "shrimpk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and error framework for the ShrimPK AI-OS kernel"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
