[package]
name = "shrimpk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and error framework for the ShrimPK AI-OS kernel"

[features]
sysinfo = ["dep:sysinfo"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
sysinfo = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
