[package]
name = "shrimpk-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Echo Memory engine — push-based AI memory where memories find you"

[dependencies]
bloomfilter.workspace = true
shrimpk-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
fastembed.workspace = true
simsimd.workspace = true
memmap2.workspace = true
crc32fast.workspace = true
rand.workspace = true
rand_distr.workspace = true
regex.workspace = true
sysinfo.workspace = true

[dev-dependencies]
tempfile = "3"
