[package]
name = "shrimpk-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Echo Memory engine — push-based AI memory where memories find you"

[features]
default = []
# CLIP ViT-B-32 vision channel (512-dim). Requires fastembed's image-models feature (on by default).
# Adds ~352 MB model download on first use.
vision = []
speech = []
# GLiNER NER: BLOCKED — gline-rs pins ort =2.0.0-rc.9, fastembed pins =2.0.0-rc.10.
# Revisit when gline-rs updates to ort rc.10+. Entity extraction uses Tier 1 heuristics for now.

[dependencies]
bloomfilter.workspace = true
shrimpk-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
fastembed.workspace = true
simsimd.workspace = true
memmap2.workspace = true
crc32fast.workspace = true
rand.workspace = true
rand_distr.workspace = true
regex.workspace = true
sysinfo.workspace = true
fs2.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile = "3"
# image crate for creating test PNG data in vision tests
image = "0.25"
