[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "shrimpk"
version = "0.1.0"
description = "Push-based AI memory where memories find YOU. 3.50ms at 100K memories."
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
features = ["pyo3/extension-module"]
