[package]
name = "shrimpk-router"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider routing with cascade fallback and cost optimization"

[dependencies]
shrimpk-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
