[package]
name = "shrimpk-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ShrimPK GraphRAG Visualization — standalone Tauri desktop app"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
