[package]
name = "echo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI test harness for Echo Memory"

[dependencies]
shrimpk-memory.workspace = true
shrimpk-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
uuid.workspace = true
rand.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
